fix: Making most recent entries visible

--- a/website/style.css
+++ b/website/style.css
@@ -7,7 +7,7 @@ body{
     display: grid;
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
-    height:100vh;
+    height:100%;
     background: #f23557;
     color: #f0d43a;
     justify-content: center;
